objects/IATSPayment__IATS_Customer_Code__c.object
<CustomObject>
    <description>Utilized to track saved credit card and recurring payment information.</description>
    <fields>
        <fullName>IATSPayment__ACH_Account_Number__c</fullName>
        <inlineHelpText>Last 4 digits of ACH account number</inlineHelpText>
        <label>ACH/Direct Debit Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__ACH_Account_Type__c</fullName>
        <label>ACH/Direct Debit Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__ACH_Reference_Number__c</fullName>
        <description>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is the donors unique number associated to their DD Instruction (DDI).</description>
        <inlineHelpText>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is the donors unique number associated to their DD Instruction (DDI).</inlineHelpText>
        <label>Direct Debit Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IATS_Customer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Auction_ID__c</fullName>
        <inlineHelpText>Utilized in conjunction with &apos;Auctions for Salesforce&apos; by Groundwire.</inlineHelpText>
        <label>Auction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Batch_Update_Failure_Details__c</fullName>
        <inlineHelpText>Used to display the Failure Details for the last time this record was included in a Batch Update Process.</inlineHelpText>
        <label>Last Batch Update Failure Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Batch_Update_Status__c</fullName>
        <inlineHelpText>Used to display the last batch update status value for the this record after it was included in a Batch Update Process.</inlineHelpText>
        <label>Last Batch Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATSPayment__Complete_Batch_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to include this record to be included in the next Batch Update Process (via the iATS Settings Batch feature). 
This field will automatically be unchecked once the Last Batch Status changes to either Success or Failure.</inlineHelpText>
        <label>Include in Next Batch Update Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>IATS_Customer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Credit_Card_Expiry_Date__c</fullName>
        <label>Credit Card Expiry Date (MM/YY)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Credit_Card_Number__c</fullName>
        <inlineHelpText>Last 4 digits of credit card number</inlineHelpText>
        <label>Credit Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Direct_Debit_Registration_Error__c</fullName>
        <description>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is registered with BACS via our UK acquirer Smart Debit. Should indicate a successful status or an error. See Status field for more information.</description>
        <inlineHelpText>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is registered with BACS via our UK acquirer Smart Debit. Should indicate a successful status or an error. See Status field for more information.</inlineHelpText>
        <label>Direct Debit Registration Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Direct_Debit_Registration_Status__c</fullName>
        <description>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is registered with BACS via our UK acquirer Smart Debit. Should indicate a successful status or an error. See Error field for more information.</description>
        <inlineHelpText>Applicable for iATS Accounts that utilize UK Direct Debit processing with iATS. The Reference number is registered with BACS via our UK acquirer Smart Debit. Should indicate a successful status or an error. See Error field for more information.</inlineHelpText>
        <label>Direct Debit Registration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__FAPS_Credit_Card_ID__c</fullName>
        <inlineHelpText>DO NOT EDIT. This value is the ID generated within the 1st Pay processing system and is linked to the stored CC number. Used only for USD iATS Merchant Accounts who use the First American 1st Pay platform.</inlineHelpText>
        <label>1st Pay Credit Card ID (CIM Vault)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__FAPS_Recurring_ID__c</fullName>
        <inlineHelpText>DO NOT EDIT. This value is the ID generated within the 1st Pay processing system and is linked to the stored recurring schedule (called transaction). Used only for USD iATS Merchant Accounts who use the First American 1st Pay platform.</inlineHelpText>
        <label>1st Pay Recurring ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>iATS Merchant Account</label>
        <referenceTo>IATSPayment__IATS_Account__c</referenceTo>
        <relationshipLabel>iATS Customer Codes</relationshipLabel>
        <relationshipName>IATS_Customer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Last_Batch_Processing_Date_Time__c</fullName>
        <inlineHelpText>Used to display the Date/Time value for the last time this record was included in a Batch Update Process.</inlineHelpText>
        <label>Last Batch Update Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Mandate_ID__c</fullName>
        <description>The SEPA Mandate ID for EURO bank debit transactions. Unique ID assigned to each donor and linked to their iATS Customer Code record.</description>
        <inlineHelpText>The SEPA Mandate ID for EURO bank debit transactions. Unique ID assigned to each donor and linked to their iATS Customer Code record.</inlineHelpText>
        <label>Mandate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Mandate_Signing_Date__c</fullName>
        <description>Date Mandate ID created for SEPA Euro Debit. Will normally reflect Recurring Payments Begin Date on Customer Code. DO NOT EDIT.</description>
        <inlineHelpText>Date Mandate ID created for SEPA Euro Debit. Will normally reflect Recurring Payments Begin Date on Customer Code. DO NOT EDIT.</inlineHelpText>
        <label>Mandate Signing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set if the customer code is related to only one opportunity (donation) record.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>IATS_Customer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Address__c</fullName>
        <label>Payer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_City__c</fullName>
        <label>Payer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Country__c</fullName>
        <label>Payer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Email__c</fullName>
        <label>Payer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_First_Name__c</fullName>
        <label>Payer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Last_Name__c</fullName>
        <label>Payer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_State__c</fullName>
        <label>Payer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payer_Zip_Code__c</fullName>
        <label>Payer Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Recurring_Payment_Amount__c</fullName>
        <label>Recurring Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Recurring_Payment_Begin_Date__c</fullName>
        <label>Recurring Payment Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Recurring_Payment_End_Date__c</fullName>
        <label>Recurring Payment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Recurring_Payment_Schedule_Date__c</fullName>
        <inlineHelpText>Applicable for &apos;Weekly&apos; and &apos;Monthly&apos; Recurring Payment Schedule Types.</inlineHelpText>
        <label>Recurring Payment Schedule Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Recurring_Payment_Schedule_Type__c</fullName>
        <label>Recurring Payment Schedule Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Recurring_Payment_Status__c</fullName>
        <label>Recurring Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Total_Amount_of_Approved_Transactions__c</fullName>
        <inlineHelpText>Do not edit. Will automatically update. IATS Brickwork field.</inlineHelpText>
        <label>Total Amount of Approved Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Total_Number_of_Approved_Transactions__c</fullName>
        <inlineHelpText>Do not edit. Will automatically update. IATS Brickwork field.</inlineHelpText>
        <label>Total Number of Approved Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Total_Number_of_Rejected_Transactions__c</fullName>
        <inlineHelpText>Do not edit. Will automatically update. IATS Brickwork field.</inlineHelpText>
        <label>Total Number of Rejected Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATSPayment__iATS_UK_AUDDIS_Return_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The UK BACS AUDDIS iATS Return record that is related to this Customer Code.</description>
        <inlineHelpText>The UK BACS AUDDIS iATS Return record related to this Customer Code. For more information on the iATS Return, or what action you should take, click the record link and then the &quot;Help for this Page&quot; link in the top right corner of the Return record.</inlineHelpText>
        <label>iATS UK AUDDIS Return</label>
        <referenceTo>IATSPayment__iATS_Debit_Return__c</referenceTo>
        <relationshipLabel>iATS Customer Codes</relationshipLabel>
        <relationshipName>iATS_Customer_Codes_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATS_recurring__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>iATS Customer Codes</relationshipLabel>
        <relationshipName>iATS_Customer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>iATS Customer Code</label>
    <listViews>
        <fullName>IATSPayment__All_Codes</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Opportunity__c</columns>
        <columns>IATSPayment__Contact__c</columns>
        <columns>IATSPayment__Method_of_Payment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IATSPayment__Recurring_Payment_Begin_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IATSPayment__Batch_Updates_Failed</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Last_Batch_Processing_Date_Time__c</columns>
        <columns>IATSPayment__Batch_Update_Status__c</columns>
        <columns>IATSPayment__Batch_Update_Failure_Details__c</columns>
        <columns>IATSPayment__Complete_Batch_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IATSPayment__Batch_Update_Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Batch Updates Failed</label>
    </listViews>
    <listViews>
        <fullName>IATSPayment__Batch_Updates_To_Include_in_Next_Batch</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Complete_Batch_Update__c</columns>
        <columns>IATSPayment__Contact__c</columns>
        <columns>IATSPayment__Method_of_Payment__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IATSPayment__Complete_Batch_Update__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Batch Updates To Include in Next Batch</label>
    </listViews>
    <nameField>
        <label>Customer Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iATS Customer Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IATSPayment__ACH_Bank_Numbers_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( IATSPayment__Complete_Batch_Update__c, 
ISCHANGED(IATSPayment__ACH_Account_Number__c), 
!ISNEW() 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__ACH_Account_Number__c</errorDisplayField>
        <errorMessage>ACH/Direct Debit Account Number cannot be adjusted via Update Processing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__ACH_Direct_Debit_Account_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
IATSPayment__Complete_Batch_Update__c == true, 
OR( 
IATSPayment__Method_of_Payment__c = &apos;ACH&apos;,
IATSPayment__Method_of_Payment__c = &apos;ACH/Direct Debit&apos;), 
ISBLANK( IATSPayment__ACH_Account_Number__c) 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__ACH_Account_Number__c</errorDisplayField>
        <errorMessage>ACH/Direct Debit Bank Number must be provided if the method of payment is set to &apos;ACH&apos; or &apos;ACH/Direct Debit&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__ACH_Direct_Debit_Account_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
IATSPayment__Complete_Batch_Update__c == true, 
OR( 
IATSPayment__Method_of_Payment__c = &apos;ACH&apos;, 
IATSPayment__Method_of_Payment__c = &apos;ACH/Direct Debit&apos;), 
ISBLANK(IATSPayment__ACH_Account_Type__c) 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__ACH_Account_Type__c</errorDisplayField>
        <errorMessage>ACH/Direct Debit Account Type must be provided if the method of payment is set to &apos;ACH&apos; or &apos;ACH/Direct Debit&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__ACH_Direct_Debit_Account_Type_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c,
!ISBLANK(IATSPayment__ACH_Account_Type__c),
IATSPayment__ACH_Account_Type__c != &apos;Checking&apos;,
IATSPayment__ACH_Account_Type__c != &apos;Savings&apos;
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__ACH_Account_Type__c</errorDisplayField>
        <errorMessage>ACH/Direct Debit Account Type must be &apos;Checking&apos; or Savings&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Credit_Card_Expiry_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true,
OR(
IATSPayment__Method_of_Payment__c = &apos;CC&apos;,
IATSPayment__Method_of_Payment__c = &apos;Credit Card&apos;),  
ISBLANK( IATSPayment__Credit_Card_Expiry_Date__c)
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Credit_Card_Expiry_Date__c</errorDisplayField>
        <errorMessage>Credit Card Expiry Date must be provided if the Method of Payment is set to &apos;CC&apos; or &apos;Credit Card&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Credit_Card_Expiry_Date_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
IATSPayment__Complete_Batch_Update__c == true, 
!ISBLANK(IATSPayment__Credit_Card_Expiry_Date__c), 
NOT(REGEX(IATSPayment__Credit_Card_Expiry_Date__c,&quot;[0-9]{2}[/]{1}[0-9]{2}&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Credit_Card_Expiry_Date__c</errorDisplayField>
        <errorMessage>Credit Card Expiry Date must be in the following format &apos;MM/YY&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Credit_Card_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true,
Or(
IATSPayment__Method_of_Payment__c = &apos;CC&apos;,
IATSPayment__Method_of_Payment__c = &apos;Credit Card&apos;),
ISBLANK(IATSPayment__Credit_Card_Number__c)
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit Card Number must be provided if the method of payment is set to &apos;CC&apos; or &apos;Credit Card&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Credit_Card_Number_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  IATSPayment__Complete_Batch_Update__c, 
ISCHANGED(IATSPayment__Credit_Card_Number__c), 
!ISNEW() 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit Card Number cannot be adjusted via Update Processing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Credit_Card_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 

AND( 
IATSPayment__Complete_Batch_Update__c == true, 
!CONTAINS(&apos;*&apos;,IATSPayment__Credit_Card_Number__c),
!CONTAINS(&apos;X&apos;,IATSPayment__Credit_Card_Number__c),
LEN(IATSPayment__Credit_Card_Number__c)&gt; 4, 
OR(
IATSPayment__Credit_Card_Type__c = &apos;Mastercard&apos;, 
IATSPayment__Credit_Card_Type__c = &apos;MC&apos;),
NOT(REGEX(IATSPayment__Credit_Card_Number__c, &apos;^5[1-5][0-9]{14}$&apos;))), 

AND( 
IATSPayment__Complete_Batch_Update__c == true, 
!CONTAINS(&apos;*&apos;,IATSPayment__Credit_Card_Number__c),
!CONTAINS(&apos;X&apos;,IATSPayment__Credit_Card_Number__c),
LEN(IATSPayment__Credit_Card_Number__c)&gt; 4, 
OR(
IATSPayment__Credit_Card_Type__c = &apos;Visa&apos;, 
IATSPayment__Credit_Card_Type__c = &apos;Visa&apos;),
NOT(REGEX(IATSPayment__Credit_Card_Number__c, &apos;^4[0-9]{12}(?:[0-9]{3})?$&apos;))), 

AND(
IATSPayment__Complete_Batch_Update__c == true, 
!CONTAINS(&apos;*&apos;,IATSPayment__Credit_Card_Number__c),
!CONTAINS(&apos;X&apos;,IATSPayment__Credit_Card_Number__c),
LEN(IATSPayment__Credit_Card_Number__c)&gt; 4, 
OR( 
IATSPayment__Credit_Card_Type__c = &apos;Discover&apos;,
IATSPayment__Credit_Card_Type__c = &apos;DSC&apos;), 
NOT(REGEX(IATSPayment__Credit_Card_Number__c, &apos;^6(?:011|5[0-9]{2})[0-9]{12}$&apos;))), 

AND(
IATSPayment__Complete_Batch_Update__c == true, 
!CONTAINS(&apos;*&apos;,IATSPayment__Credit_Card_Number__c),
!CONTAINS(&apos;X&apos;,IATSPayment__Credit_Card_Number__c),
LEN(IATSPayment__Credit_Card_Number__c)&gt; 4,  
OR(
IATSPayment__Credit_Card_Type__c = &apos;American Express&apos;,
IATSPayment__Credit_Card_Type__c = &apos;AMX&apos;), 
NOT(REGEX(IATSPayment__Credit_Card_Number__c, &apos;^3[47][0-9]{13}$&apos;))) 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit card number is incorrect.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Credit_Card_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true,
Or(
IATSPayment__Method_of_Payment__c = &apos;CC&apos;,
IATSPayment__Method_of_Payment__c = &apos;Credit Card&apos;),
ISBLANK(IATSPayment__Credit_Card_Type__c)
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Credit_Card_Type__c</errorDisplayField>
        <errorMessage>Credit Card Type must be provided if the method of payment is set to &apos;CC&apos; or &apos;Credit Card&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Credit_Card_Type_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true,
Or(
IATSPayment__Method_of_Payment__c = &apos;CC&apos;,
IATSPayment__Method_of_Payment__c = &apos;Credit Card&apos;),

IATSPayment__Credit_Card_Type__c != &apos;Visa&apos;,
IATSPayment__Credit_Card_Type__c != &apos;MasterCard&apos;,
IATSPayment__Credit_Card_Type__c != &apos;American Express&apos;,
IATSPayment__Credit_Card_Type__c != &apos;Discover&apos;,
IATSPayment__Credit_Card_Type__c != &apos;VISA&apos;,
IATSPayment__Credit_Card_Type__c != &apos;MC&apos;,
IATSPayment__Credit_Card_Type__c != &apos;AMX&apos;,
IATSPayment__Credit_Card_Type__c != &apos;DSC&apos;

)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Credit_Card_Type__c</errorDisplayField>
        <errorMessage>Credit Card Type must be one of the following values: Visa, VISA, Mastercard, MC, American Express, AMX, Discover, or DSC.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Method_of_Payment</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Method_of_Payment__c != &apos;CC&apos;,
IATSPayment__Method_of_Payment__c != &apos;Credit Card&apos;,
IATSPayment__Method_of_Payment__c != &apos;Direct Debit&apos;,
IATSPayment__Method_of_Payment__c != &apos;ACH&apos;,
IATSPayment__Complete_Batch_Update__c == true
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Method_of_Payment__c</errorDisplayField>
        <errorMessage>Method of payment must be: CC, Credit Card, ACH, or Direct Debit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Method_of_Payment_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( IATSPayment__Complete_Batch_Update__c, 
ISCHANGED( IATSPayment__Method_of_Payment__c ), 
!ISNEW() 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Method_of_Payment__c</errorDisplayField>
        <errorMessage>Method of Payment cannot be adjusted via Update Processing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Rapidata_Cancellation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
IATSPayment__Complete_Batch_Update__c, 
ISPICKVAL(IATSPayment__IATS_Account__r.IATSPayment__Direct_Debit_Processor__c, &apos;Rapidata&apos;), 
IATSPayment__Method_of_Payment__c = &apos;ACH&apos; || IATSPayment__Method_of_Payment__c = &apos;Direct Debit&apos;, 
IATSPayment__Recurring_Payment_Status__c = &apos;Inactive&apos;,
PRIORVALUE(IATSPayment__Recurring_Payment_Status__c) != &apos;Inactive&apos; 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_Status__c</errorDisplayField>
        <errorMessage>Rapidata recurring payments cannot be cancelled via Update Processing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c,
OR(
!ISBLANK(IATSPayment__Recurring_Payment_Begin_Date__c),
!ISBLANK(IATSPayment__Recurring_Payment_Status__c),
!ISBLANK(IATSPayment__Recurring_Payment_End_Date__c),
!ISBLANK(IATSPayment__Recurring_Payment_Schedule_Date__c),
!ISBLANK(IATSPayment__Recurring_Payment_Schedule_Type__c)
),
ISBLANK(IATSPayment__Recurring_Payment_Amount__c) 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_Amount__c</errorDisplayField>
        <errorMessage>Recurring Payment Amount must have a value if the other Recurring Payment fields are populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_Amount_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 IATSPayment__Complete_Batch_Update__c,
IATSPayment__Recurring_Payment_Amount__c &lt;= 0, 
IATSPayment__Recurring_Payment_Status__c = &apos;Active&apos;
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_Amount__c</errorDisplayField>
        <errorMessage>Recurring Payment Amount must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_Begin_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c,
OR(
!ISBLANK(IATSPayment__Recurring_Payment_Amount__c), 
!ISBLANK(IATSPayment__Recurring_Payment_Status__c),
!ISBLANK(IATSPayment__Recurring_Payment_End_Date__c),
!ISBLANK(IATSPayment__Recurring_Payment_Schedule_Date__c),
!ISBLANK(IATSPayment__Recurring_Payment_Schedule_Type__c)
),
ISBLANK(IATSPayment__Recurring_Payment_Begin_Date__c)
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_Begin_Date__c</errorDisplayField>
        <errorMessage>Recurring Payment Begin Date must have a value if the other Recurring Payment fields are populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_Begin_date_Today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c, 
!ISBLANK(IATSPayment__Recurring_Payment_Begin_Date__c),
IATSPayment__Recurring_Payment_Begin_Date__c &lt; Today(),
ISCHANGED(IATSPayment__Recurring_Payment_Begin_Date__c),
!ISNEW() 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_Begin_Date__c</errorDisplayField>
        <errorMessage>Recurring Payment Begin Date must be greater than or equal to today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c,
OR(
!ISBLANK(IATSPayment__Recurring_Payment_Amount__c), 
!ISBLANK(IATSPayment__Recurring_Payment_Status__c),
!ISBLANK(IATSPayment__Recurring_Payment_Begin_Date__c),
!ISBLANK(IATSPayment__Recurring_Payment_Schedule_Date__c),
!ISBLANK(IATSPayment__Recurring_Payment_Schedule_Type__c)
),
ISBLANK(IATSPayment__Recurring_Payment_End_Date__c)
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_End_Date__c</errorDisplayField>
        <errorMessage>Recurring Payment End Date must have a value if the other Recurring Payment fields are populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_End_Date_Annually</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true, 
IATSPayment__Recurring_Payment_Schedule_Type__c = &apos;Annually&apos;,
!ISBLANK(IATSPayment__Recurring_Payment_End_Date__c),
IATSPayment__Recurring_Payment_Begin_Date__c + 365 &gt;  IATSPayment__Recurring_Payment_End_Date__c)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_End_Date__c</errorDisplayField>
        <errorMessage>Recurring Payment End Date must be at least one year greater than the Recurring Payment Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_End_Date_Greater</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
IATSPayment__Complete_Batch_Update__c == true, 
!ISBLANK(IATSPayment__Recurring_Payment_Begin_Date__c), 
!ISBLANK(IATSPayment__Recurring_Payment_End_Date__c), 
IATSPayment__Recurring_Payment_End_Date__c &lt;= IATSPayment__Recurring_Payment_Begin_Date__c 
)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_End_Date__c</errorDisplayField>
        <errorMessage>Recurring Payment End Date must be greater than the Recurring Payment Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_End_Date_Monthly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true, 
IATSPayment__Recurring_Payment_Schedule_Type__c = &apos;Monthly&apos;,
!ISBLANK(IATSPayment__Recurring_Payment_End_Date__c),
IATSPayment__Recurring_Payment_Begin_Date__c + 30 &gt;  IATSPayment__Recurring_Payment_End_Date__c)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_End_Date__c</errorDisplayField>
        <errorMessage>&apos;Recurring Payment End Date&apos; must be at least one month greater than the &apos;Recurring Payment Begin Date&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_End_Date_Quarterly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true, 
IATSPayment__Recurring_Payment_Schedule_Type__c = &apos;Quarterly&apos;,
!ISBLANK(IATSPayment__Recurring_Payment_End_Date__c),
IATSPayment__Recurring_Payment_Begin_Date__c + 90 &gt;  IATSPayment__Recurring_Payment_End_Date__c)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_End_Date__c</errorDisplayField>
        <errorMessage>&apos;Recurring Payment End Date&apos; must be at least three months greater than the &apos;Recurring Payment Begin Date&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IATSPayment__Recurring_Payment_End_Date_Weekly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
IATSPayment__Complete_Batch_Update__c == true, 
IATSPayment__Recurring_Payment_Schedule_Type__c = &apos;Weekly&apos;,
!ISBLANK(IATSPayment__Recurring_Payment_End_Date__c),
IATSPayment__Recurring_Payment_Begin_Date__c + 7 &gt;  IATSPayment__Recurring_Payment_End_Date__c)</errorConditionFormula>
        <errorDisplayField>IATSPayment__Recurring_Payment_End_Date__c</errorDisplayField>
        <errorMessage>&apos;Recurring Payment End Date&apos; must be at least one week greater than the &apos;Recurring Payment Begin Date&apos;.</errorMessage>
    </validationRules>
</CustomObject>